src/index.css
/* reset */
*, *::before, *::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

html, body {
    height: 100%;
}

body {
  line-height: 1.2;
  -webkit-font-smoothing: antialiased;
  -webkit-text-size-adjust: 100%; 

}

img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

input, button, textarea, select {
  font: inherit;
}

p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

h1, h2, h3 {
    line-height: 1;
}

#root, #__next {
  isolation: isolate;
}
/* page styling */

:root {
  --clr-white: hsl(0, 0%, 100%);
  --clr-off-white: hsl(0, 0%, 94%);
  --clr-grey: hsl(0, 0%, 86%);
  --clr-smokey-grey: hsl(0, 1%, 44%);
  --clr-off-black: hsl(0, 0%, 8%);
  --clr-purple: hsl(259, 100%, 65%);
  --clr-light-red: hsl(0, 100%, 67%);
  --ff: 'Poppins', sans-serif;
}

body {
  font-family: var(--ff);
  min-height: 100vh;
  background-color: var(--clr-off-white);
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 7rem;
  padding: 2rem;
}

.card {
  position: relative;
  background-color: white;
  padding: 3.5rem 1.5rem;
  border-radius: 25px 25px 75px 25px;
}

.inputs form {
  display: flex;
  justify-content: space-between;
  gap: 2rem;
  letter-spacing: 2px;
}

.input {
  display: flex;
  flex-direction: column;
  gap: .25rem;
  max-width: 5rem;
}

.input label {
  font-size: .75rem;
  font-weight: 700;
  color: var(--clr-smokey-grey);
}

.input input {
  border: 1px solid var(--clr-grey);
  padding: .5rem;
  border-radius: 4px;
}

.error {
  color: red;
  font-size: 9px;
  font-weight: 100;
  font-style: italic;
  letter-spacing: 0;
}

.inputError label {
  color: red;
}

.inputError input {
  border: solid red;
}

hr {
  margin: 3.75rem 0;
  border: none;
  padding: 1px;
  background-color: var(--clr-grey);
}

.arrow {
  position: absolute;
  bottom: 16.5rem;
  left: 8rem;
  width: 3.5rem;
  background-color: var(--clr-purple);
  border-radius: 50%;
  padding: 1rem;
}

.display {
  display: flex;
  flex-direction: column;
  font-size: 3rem;
  font-style: italic;
  font-weight: 800;
}

span {
  color: var(--clr-purple);
  margin-right: 5px;
}

.attribution { 
  font-size: .5rem; text-align: center; 
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: .25rem;
  margin-top: 1rem;
}
.attribution a { 
  color: hsl(228, 45%, 44%); 
}

@media (min-width: 825px) {
  .card {
      padding: 3.5rem;
      border-bottom-right-radius: 200px;
  }
  .inputs {
      margin-right: 15rem;
  }
  .input {
      gap: .5rem;
      max-width: 6.25rem;
  }
  .input input {
      padding: .75rem;
  }
  hr {
      margin: 3rem 0;
  }
  .arrow {
      width: 6.25rem;
      bottom: 21.5rem;
      left: auto;
      right: 3.5rem;
  }
  .display {
      font-size: 5rem;
  }
  .attribution {
      flex-direction: row;
  }
}

